fix white space below body

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -11,5 +11,6 @@
 
 .footer {
   background-color: $primary;
+  padding-bottom: 20px;
   color: #fff;
 }
